# Lattice-SVP

./: .gitignore  BasisProduction.py  C2_SchnorrEuchner.pyx  C_SchnorrEuchner.pyx  Dockerfile  KFP.py  LatticeReduction.py  MANIFEST.in  README.md  SVPFinder.py  SchnorrEuchner.py  install-dependencies.sh  net_ports_finder.sh  pyproject.toml  requires.txt  runme.sh  setup.py  system_paths.json
operationCharts/: sequenceFlow.js  workFlow.js
shells/: runcompile.sh  runowning.sh  runpot.sh
src/: cython_setup.py
src/Lattice_SVP/manager/: __init__.py  __main__.py  manager.py  secretary.py  std_libs.py
src/Lattice_SVP/manager/manager_process/: ManagerProcess.cpp  ManagerProcess.pyx  cppModules.pxd
src/Lattice_SVP/pot/: __init__.py  __main__.py  pot.py
src/Lattice_SVP/worker/: __init__.py  __main__.py  worker.py
src/cpp_Lattice_SVP/include/: CMakeLists.txt  Jobs.cpp  Jobs.hpp  JobsEstimator.cpp  JobsEstimator.h  JobsPair.cpp  JobsPair.h  Makefile  Node.cpp  Node.hpp  Pair.cpp  Pair.hpp  Tree.cpp  Tree.hpp  Utils.cpp
src/data/basis/: random  test1  test2  test3
src/simulator/: .__main__.py.swp  Executor.py  __init__.py  __main__.py
src/simulator/aModules/: __init__.py  aManager.py  aPot.py  aProcess.py  aSecretary.py  aTemp.py  aWorker.py  libs.py  xtest.py
tex/: biblio.bib  main.tex
tex/chapters/: chapter_1_intro.tex  chapter_2.tex  chapter_3.tex  chapter_4.tex  chapter_5.tex
tex/start_sections/: 1_opening_page.tex  2_ypeuthynh_dhlwsh.tex  3_abstract.tex
vm_setup/: Dockerfile  runme.sh
vm_setup/instructions/: requires.txt
(+6 files in other folders)
